*Only mapDB cachePool built, and remove ehcache and leveldb cachePool